# yt-learner

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  yt-learner-discord.service  yt-learner-worker.service
app/: __init__.py  channel_watches.py  config.py  discord_bot.py  extractor.py  job_queue.py  metadata.py  pipeline.py  scheduler.py  scheduler_cli.py  scheduler_loop.py  storage.py  telemetry.py  transcript.py  worker.py  youtube_channels.py  youtube_urls.py
docs/: youtube-learning-extractor-discord-mvp.md
docs/adr/: 0001-discord-first-mvp.md  0002-source-model-and-artifact-storage.md  0003-youtube-channel-scheduler.md  0004-run-channel-scheduler-from-cron.md  0005-expand-to-multi-source-learning.md  0005-move-runtime-management-to-docker-compose.md
scripts/: service.sh
tests/: test_channel_watches.py  test_discord_bot.py  test_extractor.py  test_job_queue.py  test_pipeline.py  test_scheduler.py  test_scheduler_cli.py  test_scheduler_loop.py  test_storage.py  test_telemetry.py  test_worker.py  test_youtube_channels.py  test_youtube_urls.py
