[project]
name = "yt-learner"
version = "0.1.0"
description = "Discord-first MVP for turning YouTube videos into learning notes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.4.0",
    "opentelemetry-exporter-otlp-proto-http>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "openai>=2.0.0",
    "python-dotenv>=1.0.0",
    "youtube-transcript-api>=0.6.2",
]

[project.scripts]
yt-learner-discord = "app.discord_bot:main"
yt-learner-scheduler = "app.scheduler_cli:main"
yt-learner-worker = "app.worker:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
